# amr_ws

./: .gitignore  README.md  analyze_logs.py  compare_controllers.py  compare_trajectory.py
maps/: amr_map.yaml  amr_map_empty.yaml
src/amr_msgs/: CMakeLists.txt
src/control_lqr/src/: lqr_node.cpp
src/control_mpc/: CMakeLists.txt  package.xml
src/control_mpc/include/control_mpc/: mpc_core.hpp  mpc_node.hpp
src/control_mpc/src/: cbf_filter.cpp  main.cpp  main_multi.cpp  mpc_core.cpp  mpc_node.cpp  obstacle_tracker_node.cpp  tracking_rmse_node.cpp
src/estimation/: CMakeLists.txt
src/estimation/include/estimation/: ekf_core.hpp  ekf_node.hpp  map_ekf_node.hpp
src/estimation/src/: ekf_core.cpp  ekf_node.cpp  map_ekf_node.cpp  odom_tf_broadcaster_node.cpp  pose_rmse_node.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: slam_toolbox_online_async.yaml
src/localization/launch/: slam.launch.py
src/localization/src/: localization_monitor_node.cpp
src/manipulation/: README.md  package.xml  setup.py
src/manipulation/launch/: w7_perception.launch.py  w7_perception_pick.launch.py  w7_pick_place.launch.py  w8_perception_pick_return.launch.py  w8_yolo_perception_pick.launch.py
src/manipulation/manipulation/: perception_pick_commander_node.py  pick_place_node.py  red_cube_detector_node.py  return_to_origin_trigger_node.py  yolo_pick_pose_node.py
src/manipulation/scripts/: follow_joint_trajectory_to_joint_state_server  perception_pick_commander_node  pick_place_node  red_cube_detector_node  return_to_origin_trigger_node  w7_docking_supervisor_node  yolo_pick_pose_node
src/planning/: CMakeLists.txt
src/planning/include/planning/: astar.hpp  path_planner_node.hpp  prm.hpp  rrt_star.hpp
src/planning/src/: astar.cpp  dwa_local_planner_node.cpp  path_planner_node.cpp  prm.cpp  rrt_star.cpp
src/safety/: CMakeLists.txt
src/safety/src/: mock_link_node.cpp
src/scenarios/: CMakeLists.txt
src/scenarios/config/: ros_gz_bridge.yaml
src/scenarios/launch/: bringup.launch.py  experiment.launch.py  isaac_navigation_bringup.launch.py  isaac_navigation_bringup_lidar_only.launch.py
src/scenarios/scripts/: obstacle_controller_node.py
src/scenarios/urdf/: amr_robot.urdf  amr_robot.urdf.xacro
src/scenarios/worlds/: monte_carlo_room.sdf  simple_room.sdf  simple_room_dynamic.sdf  simple_room_empty.sdf  test_room.sdf  test_room_dynamic.sdf
tools/: analyze_logs.py  cbf_validation_analyzer.py  compare_global_planners.py  compare_trajectory.py  demo_fault_scenario.py  dynamic_obstacle_safety_eval.py  isaac_dynamic_obstacle_proxy.py  monte_carlo.py  plot_monte_carlo.py  qos_experiment.py  remove_usd_prims.py  step3_comm_drop_verification.py  step4_deadline_experiment.py  step7_e2e_latency.py  stop_demo_processes.sh  w9_evaluator.py
