<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation</name>
  <version>0.0.0</version>
  <description>Stationary Franka bringup and pick-place scaffolding for the Isaac AMR warehouse scenario.</description>
  <maintainer email="leeyj950322@gmail.com">lyj</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>nav_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
